# tarantool-leptos

./: Cargo.toml  Makefile  README.md
front-app/: Cargo.toml
front-app/src/: lib.rs
front-app/src/components/: home_page.rs  mod.rs  todo_footer.rs  todo_header.rs  todo_item.rs
front-wasm/: Cargo.toml
front-wasm/src/: lib.rs
pkg/: index.css  tarantool-leptos.js  tarantool-leptos_bg.wasm
tnt-server/: Cargo.toml
tnt-server/src/: init.lua  lib.rs  test.rs
tnt-server/src/repo/: mod.rs  todo.rs  user.rs
