[package]
name = "front-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
front-app = { path = "../front-app", default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = [ "hydrate" ] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1"